@@ -1,3 +1,7 @@
+2006-03-11  Bruno Haible  <bruno@clisp.org>
+
+	* javacomp.m4 (gt_JAVACOMP): Treat gcj-4.x like gcj-3.x.
+
 2005-12-04  Bruno Haible  <bruno@clisp.org>
 
 	* csharpexec.m4 (gt_CSHARPEXEC): Add support for 'clix' launcher
